# gilbert

./: .gitignore  CLAUDE.md  README.md  gilbert.sh  gilbert.yaml  package.json  pyproject.toml
.claude/memory/: MEMORIES.md  memory-access-control.md  memory-agent-service.md  memory-ai-context-profiles.md  memory-ai-service.md  memory-calendar-service.md  memory-camera-service.md  memory-capability-protocols.md  memory-config-actions.md  memory-config-and-data-dir.md  memory-credential-service.md  memory-dashboard-nav.md  memory-device-interfaces.md  memory-doorbell-service.md  memory-event-system.md  memory-feed-briefing-service.md  memory-feeds-service.md  memory-greeting-service.md  memory-inbox-service.md  memory-knowledge-service.md  memory-mcp.md  memory-media-library-backends.md  memory-media-library-service.md  memory-migrations.md  memory-multi-backend-pattern.md  memory-music-service.md  memory-notification-service.md  memory-openai-compatible-backend.md  memory-persona-service.md  memory-plugin-system.md  memory-presence-service.md  memory-push-notification-service.md  memory-radio-dj-service.md  memory-scheduler-service.md  memory-screen-service.md  memory-service-registry.md  memory-service-system.md  memory-skills-system.md  memory-slash-commands.md  memory-speaker-system.md  (+6 more)
docs/architecture/: agent-service.md  ai-context-profiles.md  calendar-service.md  chat-transcript.md  frontend-design-system.md  inbox-service.md  knowledge-service.md  mcp.md  memory-scopes.md  presence-service.md  proposals-service.md  skill-workspaces.md  soul-identity.md  source-update-service.md  speaker-system.md
frontend/: DESIGN.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
installed-plugins/: README.md
local-plugins/: README.md
src/gilbert/: __init__.py  __main__.py  config.py
tests/: conftest.py
tests/fixtures/: mcp_echo_server.py  mcp_http_echo_server.py
tests/integration/: test_ai_conversations.py  test_mcp_end_to_end.py  (+2 more)
(+405 files in other folders)
