[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gilbert"
version = "0.1.0"
description = "AI assistant for home and business automation"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "aiosqlite>=0.19",
    "httpx>=0.27",
    "fastapi>=0.135.3",
    "uvicorn[standard]>=0.43.0",
    "argon2-cffi>=23.1",
    "google-auth>=2.49.1",
    "google-api-python-client>=2.193.0",
    "pyngrok>=8.0.0",
    "soco>=0.30.15",
    "python-multipart>=0.0.22",
    "chromadb>=1.5.5",
    "pypdf>=6.9.2",
    "python-docx>=1.2.0",
    "openpyxl>=3.1.5",
    "python-pptx>=1.0.2",
    "pymupdf>=1.27.2.2",
    "pytesseract>=0.3.13",
    "pillow>=12.2.0",
    "anthropic>=0.89.0",
    "markdown>=3.5",
    "slack-bolt>=1.18",
    "pyjwt[crypto]>=2.12.1",
    "aiohttp>=3.13.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "mypy>=1.8",
    "ruff>=0.3",
]

[tool.hatch.build.targets.wheel]
packages = ["src/gilbert"]

[tool.pytest.ini_options]
# Include any ``plugins/<name>/tests`` directories so plugin-specific
# tests (which live in the briandilley/gilbert-plugins repo) run
# automatically when the plugin is installed under ``plugins/``.
testpaths = ["tests", "plugins"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
# ``importlib`` mode — avoids the duplicate ``tests.conftest`` clash
# we'd hit otherwise, because every plugin has its own ``tests/``
# directory with its own ``conftest.py``. The legacy ``prepend`` mode
# would import all of them as ``tests.conftest`` and collide on the
# second one.
addopts = "--import-mode=importlib"

[tool.mypy]
python_version = "3.12"
strict = true

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "reportlab>=4.4.10",
]
